syntax = "proto3";

option csharp_namespace = "UserService";

import "google/protobuf/empty.proto";

message RolePermissionGrpcEntity {
  int32 role_id = 1;
  int32 permission_id = 2;
}

service AuthorizationGrpc {
  rpc GetRolePermissions (google.protobuf.Empty) returns (RolePermissionList);
}

message RolePermissionList {
  repeated RolePermissionGrpcEntity role_permissions = 1;
}