syntax = "proto3";

option csharp_namespace = "UserService";

import "google/protobuf/empty.proto";

message RoleGrpcEntity {
  int32 id = 1;
  string name = 2;
}

service RoleGrpc {
  rpc GetRoles (google.protobuf.Empty) returns (RoleList);
  rpc GetRoleById (RoleRequest) returns (RoleGrpcEntity);
}

message Empty {}

message RoleRequest {
  int32 id = 1;
}

message RoleList {
  repeated RoleGrpcEntity roles = 1;
}
