syntax = "proto3";

option csharp_namespace = "UserService";

import "google/protobuf/empty.proto";

message PermissionGrpcEntity {
  int32 id = 1;
  string name = 2;
}

service PermissionGrpc {
  rpc GetPermissions (google.protobuf.Empty) returns (PermissionList);
}

message PermissionList {
  repeated PermissionGrpcEntity permissions = 1;
}
